# CuckooGraph

./: README.md
Competitors/: CMakeLists.txt  overalTest.sh
Competitors/include/: GeneralGraph.hpp  LiveGraphInterface.hpp  SortledtonInterface.hpp  SpruceInterface.hpp  TestAlgorithm.hpp
Competitors/include/sortledton/: BFSSourceSelector.h  Configuration.h  Driver.h  EdgeBlock.h  EdgeList.h  EdgeVersionRecord.h  RWSpinLock.h  SizeVersionChainEntry.h  SortedCSRDataSource.h  TopologyInterface.h  Transaction.h  VersionedBlockedEdgeIterator.h  VersionedTopologyInterface.h  VersioningBlockedSkipListAdjacencyList.h  VertexIndex.h  utils.h
Competitors/src/: GeneralGraph.cpp  LiveGraphInterface.cpp  SortledtonInterface.cpp  SpruceInterface.cpp  TestAlgorithm.cpp  test.cpp
Competitors/src/spruce/: index_algorithms.cpp
Competitors/utility/: ExtractSubGraph.cpp  SparseGenerator.cpp  cankao.cpp  cankao.hpp
CuckooGraph/: Auxo.h  BobHash.h  Cuckoo.h  CuckooGraphInterface.cpp  CuckooGraphInterface.h  CuckooGraphType.c  GSS.h  GraphUndirected.h  Makefile  TestRedis  TestRedis.cpp  Util.h  WindBell.h  cankao.cpp  hash.h  hashFunction.h  hashTable.h  main  main.cpp  querysupportstruct.h  redisDriver.cpp  redisDriver.h  redismodule.h  tcm.h
CuckooGraphNeo4j/TestingAPI/neo4jAPI/: Testing.java
CuckooGraphNeo4j/community/graphdb-api/: PublicApi.txt
CuckooGraphNeo4j/community/graphdb-api/src/main/java/org/neo4j/graphdb/: CuckooGraph.java
CuckooGraphNeo4j/community/kernel/src/main/java/org/neo4j/kernel/impl/core/: NodeEntity.java
CuckooGraphNeo4j/community/kernel/src/main/java/org/neo4j/kernel/impl/coreapi/: TransactionImpl.java
CuckooGraphNeo4j/community/kernel/src/main/java/org/neo4j/kernel/impl/factory/: GraphDatabaseFacade.java
CuckooGraph_weighted/: Auxo.h  Cuckoo.h  GSS.h  Util.h  WindBell.h  hash.h  main.cpp  tcm.h
Horae/: Makefile  Util.h  main.cpp
Horae/headers/: HashFunction.h  Horae.h  QueryFunction.h  params.h
Horae/headers/Layer/: Layer.h
Horae/headers/Layer/LayerSuc/: LayerSuc.h  LayerSucClass.h
Horae/headers/Layer/LayerSucPre/: LayerSucPre.h  LayerSucPreClass.h
Horae/headers/Layer/LayerSucPreMap/: LayerSucPreMap.h  LayerSucPreMapClass.h
Syn-Datasets-Code/: SynDatasetsCode.h
Syn-LDG-Code/: SynLDGCode.h
